Fixed notes, some more simplifications